2008-03-14  David Schleef  <ds@schleef.org>

	Patch by: William M. Brack

	* gst/videotestsrc/videotestsrc.c: Fix Bayer pattern generation.

2008-03-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gststreamselector.c: (gst_selector_pad_event),
	(gst_selector_pad_chain):
	* gst/playback/gststreamselector.h:
	Revert change that caused regression until a real fix is found.
	Fixes #522203.

2008-03-12  Michael Smith <msmith@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_parse_caps):
	* gst-libs/gst/audio/gstringbuffer.h:
	  Rename recently added buffer types to make more sense.
	* ext/alsa/gstalsasink.c: (alsasink_parse_spec),
	(gst_alsasink_write):
	  Adapt for above API changes.
	  Fixes bug #520523.

2008-03-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstnetbuffer.def:
	Add new symbol gst_netaddress_equal. Fixes bug #521743.

2008-03-11  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* win32/common/config.h:
	0.10.17.3 pre-release

2008-03-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create):
	Fix duration when no clock was provided. Fixes #520300.

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete  <tester at tester ca>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/netbuffer/gstnetbuffer.c: (gst_netaddress_equal):
	* gst-libs/gst/netbuffer/gstnetbuffer.h:
	Add trivial function to compare GstNetAddress. See #520626.
	API: GstNetBuffer::gst_netaddress_equal

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/tcp/gstmultifdsink.c: (gst_multi_fd_sink_class_init):
	Update mode property docs, it's deprecated now.

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtsp/gstrtspconnection.c:
	(gst_rtsp_connection_create):
	* gst/tcp/gstmultifdsink.c: (gst_fdset_mode_get_type),
	(gst_multi_fd_sink_class_init), (gst_multi_fd_sink_start):